--- a/carrito.html
+++ b/carrito.html
@@ -78,7 +78,7 @@
                 <small>$4900</small>
             </div>
             <div class="col-3 mx-auto mt-3 text-black d-flex align-items-center justify-content-center">
-                <img src="BASILE/alfombra.jpg" alt="alfombra" width="100">
+                <img src="BASILE/alfombra.jpg" alt="alfombra" width="100" class="img-fluid">
             </div><div class="col-3 mx-auto mt-3 text-black d-flex align-items-center justify-content-center">
                 <small>Alfombra/deck</small>
             </div>
