--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="BASILE/logobasilefavicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../BASILE/logobasilefavicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Smooch&display=swap" rel="stylesheet">
@@ -30,7 +30,7 @@
     <meta property="og:image" content="">
     <meta property="og:description"
         content="Fabricantes de elementos decorativos para tu hogar. Ubicados en Ramos Mejía, somos apasionados de la madera y realizamos pedidos personalizados para cada cliente, no dudes en consultarnos!">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Basile Wood & Deco | Elementos decorativos de madera para hogares</title>
 </head>
 
@@ -50,7 +50,7 @@
         <!--nav bar-->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid contenedor-nav">
-                <a href="index.html" class="navbar-brand"><img src="BASILE/logobasile.jpg" alt="Logo Basile"
+                <a href="index.html" class="navbar-brand"><img src="../BASILE/logobasile.jpg" alt="Logo Basile"
                         class="header-logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,16 +62,13 @@
                             <a class="nav-link" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item list li-hover li-trans">
-                            <a class="nav-link" href="nosotros.html">Nosotros</a>
+                            <a class="nav-link" href="pages/nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item list li-hover li-trans">
-                            <a class="nav-link" href="productos.html">Productos</a>
+                            <a class="nav-link" href="pages/productos.html">Productos</a>
                         </li>
                         <li class="nav-item list li-hover li-trans">
-                            <a class="nav-link" href="contacto.html">Contacto</a>
-                        </li>
-                        <li class="nav-item list li-hover li-trans">
-                            <a class="nav-link" href="galeria.html">Galeria</a>
+                            <a class="nav-link" href="pages/contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -85,11 +82,10 @@
                         </svg>
                     </a>
                     <a href="carrito.html" class="carrito-nav">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
-                            class="bi bi-cart4" viewBox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="" fill="currentColor"
+                            class="bi bi-cart3" viewBox="0 0 16 16">
                             <path
-                                d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z" />
-                        </svg>
+                                d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
                         </svg>
                     </a>
                 </div>
@@ -130,7 +126,7 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4 mx-auto card" data-aos="zoom-in-up">
                     <h2 class="titulo-card">Envíos a todo el país</h2>
-                    <img src="BASILE/cardenvios.png" alt="Envios" class="img-card">
+                    <img src="BASILE/cardviaje.png" alt="Envios" class="img-card">
                     <h3 class="p-card">Realizamos los envíos por correo argentino</h3>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4 mx-auto card" data-aos="zoom-in-up">
@@ -144,11 +140,11 @@
     </main>
 
 
+  <!--footer-->
 
 
-
-    <footer class="pt-5 pb-4 mt-5">
-        <div class="footer container text-md-left">
+    <footer class="mt-5">
+        <div class="pt-5 pb-4 footer container text-md-left">
             <div class="div-footer row text-md-left">
                 <div class="col-md-3 col-lg-3 col-xl-2 mx-auto mt-3">
                     <h5 class="titulo-footer mb-4">Secciones</h5>
@@ -168,7 +164,7 @@
                         <a href="carrito.html" class="text-footer">Carrito</a>
                     </h6>
                 </div>
-                <div class="col-md-2 col-lg-2 col-xl-2 mg-auto mt-3">
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                     <h5 class="titulo-footer mb-4">Otros</h5>
                     <h6 class="margin-footer">
                         <a href="#" class="text-footer">Preguntas frecuentes</a>
@@ -204,6 +200,13 @@
                         <i class="fas fa-phone"></i>+5491134715324
                     </h6>
                 </div>
+            </div>
+        </div>
+                    <div class="div-bar-footer">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-c-circle" viewBox="0 0 16 16">
+                            <path d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8Zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0ZM8.146 4.992c-1.212 0-1.927.92-1.927 2.502v1.06c0 1.571.703 2.462 1.927 2.462.979 0 1.641-.586 1.729-1.418h1.295v.093c-.1 1.448-1.354 2.467-3.03 2.467-2.091 0-3.269-1.336-3.269-3.603V7.482c0-2.261 1.201-3.638 3.27-3.638 1.681 0 2.935 1.054 3.029 2.572v.088H9.875c-.088-.879-.768-1.512-1.729-1.512Z"/>
+                          </svg>
+                <h6 class="texto-bar-footer">Basile | Todos los derechos reservados</h6>
             </div>
     </footer>
 
